--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/styles/layout.css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/styles/new-tweet.css" />
+
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/styles/tweet-box.css">
+
   </head>
+
+
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
-      <span class="header">Tweeter</span>
+      <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+      <img class="logo" src="./images/bird.png" width="80px" height="80px">
+      <span class="header">Tweeeeetrr</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+
+      <section class="new-tweet">
+        <h2>Compose Yo Tweet, Bruh</h2>
+          <form action="/tweets/" method="POST">
+            <textarea name="text" placeholder="Suuuhh Duuude?"></textarea>
+            <input type="submit" value="Tweeeet">
+            <span class="counter">140</span>
+          </form>
+      </section>
+
+      <section id="tweet-box">
+        <article>
+          <h2>
+            <form action="/tweet-box" method="get">
+              <header>
+              <h1></h1>
+              </header>
+            </form>
+          </h2>
+
+        </article>
+
+
+      </section>
     </main>
 
   </body>
