--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
 
@@ -36,6 +38,8 @@
       <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
       <img class="logo" src="./images/bird.png" width="80px" height="80px">
       <span class="header">Tweeeeetrr</span>
+      <button id="compose" type="button" class="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Compose</button>
+
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -43,22 +47,42 @@
 
       <section class="new-tweet">
         <h2>Compose Yo Tweet, Bruh</h2>
-          <form action="/tweets/" method="POST">
+          <form action="/tweets" method="POST">
             <textarea name="text" placeholder="Suuuhh Duuude?"></textarea>
             <input type="submit" value="Tweeeet">
             <span class="counter">140</span>
           </form>
       </section>
 
-      <section id="tweet-box">
+     
+<!-- TWEET BOXES -->
+
+
+      <section id="tweets-container">
+
+
+
         <article>
-          <h2>
-            <form action="/tweet-box" method="get">
-              <header>
-              <h1></h1>
-              </header>
-            </form>
-          </h2>
+          <header class="header">
+            <img class="avatar" src="http://rs795.pbsrc.com/albums/yy236/terminatoraf/Funny/mrbeabn.jpg~c200" height=50px width=50px>
+
+            <h3 class="username">Beanok Makto</h3>
+            <span class="handle">@Beanatar</span>
+          </header>
+
+          <div class="tweet-content"><p class="p">Having a blast learning code! Nearly done!</p></div>
+
+          <footer>
+            <div class="icons">
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-retweet" aria-hidden="true"></i>
+              <i class="fa fa-heart" aria-hidden="true"></i>
+
+            </div>
+            <div class="timestamp">
+              10 days ago 
+            </div>
+          </footer>
 
         </article>
 
